# sibyl-oracle-solana

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  HACKATHON_STATUS.md  LICENSE  QUICKSTART.md  README.md  deploy.sh  package-lock.json  package.json  setup.sh
.github/workflows/: build.yml
.hackathon/: state.json
agent/: index.js  init.js
logs/tweets/: prediction_1_1770259924079.txt  prediction_2_1770259932537.txt  prediction_3_1770259937029.txt  prediction_4_1770259941980.txt  prediction_5_1770259953812.txt  prediction_6_1770259959794.txt
programs/sibyl-oracle/: Cargo.toml
programs/sibyl-oracle/src/: lib.rs
scripts/: setup-wallet.js
tests/: sibyl-oracle.test.ts
