[package]
name = "sibyl-oracle"
version = "0.1.0"
description = "Sibyl Oracle - AI Prediction Oracle on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", optional = true }

[dev-dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
